# gropius

./: .gitignore  .gitlint  Cargo.toml  Justfile  README.md  mise.toml
.github/: dependabot.yaml
.github/workflows/: gitlint.yaml  tests.yaml
examples/: axum.rs  hyper.rs
gropius-macros/: Cargo.toml
gropius-macros/src/: api.rs  api_error.rs  lib.rs
gropius-macros/src/api/: path.rs
src/: error.rs  extractors.rs  generated.rs  lib.rs  router.rs  spec.rs
src/extractors/: path.rs
tests/: errors.rs  images.rs  multi.rs  raw_request.rs  simple.rs
tests/snapshots/: errors__openapi_spec.snap  images__openapi_spec.snap  multi__openapi_spec.snap  simple__openapi_spec.snap
tests/ui/: bad_api_error_args.rs  bad_api_error_args.stderr  duplicate_status.rs  duplicate_status.stderr  extractors_out_of_order.rs  extractors_out_of_order.stderr  invalid_paths.rs  invalid_paths.stderr  invalid_status.rs  invalid_status.stderr  missing_endpoint.rs  missing_endpoint.stderr  missing_status.rs  missing_status.stderr  return_type_not_result.rs  return_type_not_result.stderr  status_on_enum.rs  status_on_enum.stderr  transparent_status_not_newtype.rs  transparent_status_not_newtype.stderr
