[workspace]
resolver = "3"
members = ["gropius-macros"]

[workspace.package]
version = "0.1.13"
edition = "2024"
authors = ["Colin Marc <colin.marc@bauplanlabs.com>"]
homepage = "https://docs.bauplanlabs.com"
repository = "https://github.com/bauplanlabs/gropius"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
matchit = "0.9"

[package]
name = "gropius"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A toolkit for declaring OpenAPI definitions in code"
homepage.workspace = true
repository.workspace = true
license.workspace = true
exclude = [
    ".*",
    "tests/",
    "CHANGELOG.md",
    "Justfile",
    "mise.toml",
]

[dependencies]
bytes = "1"
form_urlencoded = "1"
gropius-macros = { path = "gropius-macros" }
http = "1"
http-body = "1"
http-body-util = "0.1"
indexmap = "2"
matchit.workspace = true
oas3 = "0.22"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
serde_urlencoded = "0.7"
serde_yaml_ng = "0.10"
smallvec = "1"
thiserror = "2"
tower = "0.5"

[dev-dependencies]
anyhow = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "service"] }
insta = { version = "1", features = ["yaml"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
trybuild = "1"
